# zero2prod

./: Cargo.toml
.github/workflows/: general.yml
migrations/: 20221220202753_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
